-Add libraries -Notification click should be work -The close notification button, close the tabata training. -Several Fixes

--- a/phone/src/main/res/layout/fragment_info_interval.xml
+++ b/phone/src/main/res/layout/fragment_info_interval.xml
@@ -46,7 +46,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="1/8"
+                android:text="0/0"
                 android:id="@+id/infoInterval_Rounds_TextView"
                 android:layout_weight="50"
                 android:gravity="center"
@@ -79,7 +79,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="@string/Running"
+                android:text="@string/nothing"
                 android:id="@+id/infoInterval_Mode_TextView"
                 android:layout_weight="50"
                 android:gravity="center"
