--- a/phone/src/main/res/layout/fragment_chronometer.xml
+++ b/phone/src/main/res/layout/fragment_chronometer.xml
@@ -60,7 +60,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="05:42"
+        android:text="00;00"
         android:id="@+id/chronometerTotal_TextView"
         android:layout_alignParentEnd="true"
         android:layout_alignBottom="@+id/chronometerTotalText_TextView"
