--- a/phone/src/main/res/layout/fragment_training_tabata.xml
+++ b/phone/src/main/res/layout/fragment_training_tabata.xml
@@ -9,7 +9,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/countDown_button"
+        android:text="@string/startCountDown"
         android:id="@+id/training_button"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
