--- a/phone/src/main/res/layout/notification_interval.xml
+++ b/phone/src/main/res/layout/notification_interval.xml
@@ -137,4 +137,20 @@
 
     </LinearLayout>
 
+    <ImageButton
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="X"
+        android:id="@+id/notifIntervalClose_Button"
+        android:layout_alignParentBottom="false"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="false"
+        android:layout_alignParentTop="true"
+        android:textColor="@color/white"
+        android:textSize="20dp"
+        android:layout_marginRight="0dp"
+        android:gravity="center"
+        android:clickable="true" />
+
 </RelativeLayout>
