--- a/phone/src/main/res/layout/fragment_chronometer.xml
+++ b/phone/src/main/res/layout/fragment_chronometer.xml
@@ -1,87 +1,61 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="180dp"
-    tools:context=".customFragments.ChronometerFragment"
-    android:background="@color/black">
+    android:layout_height="260dp"
+    tools:context=".customFragments.ChronometerFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
     <TextView
         android:layout_width="fill_parent"
-        android:layout_height="80dp"
+        android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:id="@+id/chronometer_TextView"
         android:text="00:00"
         android:gravity="center"
-        android:layout_below="@+id/chronometer_bar1"
         android:layout_alignParentStart="true"
-        android:textSize="70dp"
+        android:textSize="80dp"
         android:typeface="monospace"
-        android:textColor="@color/white" />
+        android:textColor="@color/black"
+        android:layout_below="@+id/chronomterTextInterval_TextView"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp" />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/interval_timer"
         android:id="@+id/chronomterTextInterval_TextView"
+        android:textColor="@color/black"
         android:layout_alignParentTop="true"
+        android:textSize="30dp"
         android:layout_alignParentStart="true"
-        android:layout_marginLeft="41dp"
-        android:layout_marginTop="5dp"
-        android:textColor="@color/white" />
+        android:gravity="center" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="1dp"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Small Text"
-        android:id="@+id/chronometer_bar1"
-        android:layout_below="@+id/chronomterTextInterval_TextView"
-        android:layout_alignStart="@+id/chronomterTextInterval_TextView"
-        android:layout_alignEnd="@+id/chronomterTextInterval_TextView"
-        android:background="@color/white"
-        android:textColor="@color/white" />
-
-    <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/total_remaining"
         android:id="@+id/chronometerTotalText_TextView"
         android:gravity="center"
+        android:textColor="@color/black"
         android:layout_below="@+id/chronometer_TextView"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="20dp"
-        android:textColor="@color/white" />
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="00;00"
+        android:text="00:00"
         android:id="@+id/chronometerTotal_TextView"
-        android:layout_alignParentEnd="true"
-        android:layout_alignBottom="@+id/chronometerTotalText_TextView"
         android:gravity="center"
         android:textSize="40dp"
         android:typeface="monospace"
-        android:layout_toRightOf="@+id/chronometer_bar1"
-        android:layout_below="@+id/chronometer_TextView"
-        android:textColor="@color/white" />
-
-    <TextView
-        android:layout_width="1dp"
-        android:layout_height="20dp"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Small Text"
-        android:layout_alignBottom="@+id/chronometerTotal_TextView"
-        android:layout_alignTop="@+id/chronometerTotalText_TextView"
-        android:layout_toRightOf="@+id/chronometerTotalText_TextView"
-        android:background="@color/white"
-        android:layout_marginLeft="40dp"
-        android:id="@+id/chronometer_bar2"
-        android:textColor="@color/white" />
+        android:textColor="@color/black"
+        android:layout_below="@+id/chronometerTotalText_TextView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp" />
 
 </RelativeLayout>
