--- a/phone/src/main/res/layout/fragment_info_interval.xml
+++ b/phone/src/main/res/layout/fragment_info_interval.xml
@@ -1,9 +1,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="140dp"
+    android:layout_height="130dp"
     tools:context="vssnake.intervaltraining.customFragments.InfoIntervalFragment"
-    android:background="@color/black">
+    android:background="#ff5722">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -18,7 +18,8 @@
         android:layout_alignParentEnd="true"
         android:gravity="center"
         android:textSize="30dp"
-        android:textColor="#ff439eff" />
+        android:textColor="@color/black"
+        android:alpha="0.6" />
 
     <LinearLayout
         android:orientation="horizontal"
@@ -50,7 +51,8 @@
                 android:id="@+id/infoInterval_Rounds_TextView"
                 android:layout_weight="50"
                 android:gravity="center"
-                android:textColor="@color/white" />
+                android:textColor="@color/white"
+                android:layout_marginTop="-10dp" />
         </LinearLayout>
 
         <TextView
@@ -58,7 +60,8 @@
             android:layout_height="fill_parent"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Large Text"
-            android:background="@color/white" />
+            android:background="@color/white"
+            android:layout_marginBottom="10dp" />
 
         <LinearLayout
             android:orientation="vertical"
@@ -83,7 +86,8 @@
                 android:id="@+id/infoInterval_Mode_TextView"
                 android:layout_weight="50"
                 android:gravity="center"
-                android:textColor="@color/white" />
+                android:textColor="@color/white"
+                android:layout_marginTop="-10dp" />
         </LinearLayout>
     </LinearLayout>
 
