--- a/phone/src/main/res/layout/fragment_info_interval.xml
+++ b/phone/src/main/res/layout/fragment_info_interval.xml
@@ -52,6 +52,15 @@
                     android:textSize="25dp" />
             </LinearLayout>
 
+            <View
+                android:layout_width="1dp"
+                android:layout_height="fill_parent"
+                android:layout_weight="0"
+                android:background="@color/black"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginRight="30dp" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
@@ -63,6 +72,15 @@
                 android:textColor="@color/black"
                 android:layout_above="@+id/linearLayout"
                 android:layout_alignParentStart="true" />
+
+            <View
+                android:layout_width="1dp"
+                android:layout_height="fill_parent"
+                android:layout_weight="0"
+                android:background="@color/black"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginLeft="30dp" />
 
             <LinearLayout
                 android:orientation="vertical"
