--- a/phone/src/main/res/layout/notification_interval.xml
+++ b/phone/src/main/res/layout/notification_interval.xml
@@ -1,25 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="120dp"
+    android:layout_width="match_parent" android:layout_height="wrap_content"
     android:id="@+id/intervalNotification"
     android:background="#ffd8460f">
 
+    <ImageButton
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="X"
+        android:id="@+id/notifIntervalClose_Button"
+        android:layout_alignParentBottom="false"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="false"
+        android:layout_alignParentTop="true"
+        android:textColor="@color/white"
+        android:textSize="20dp"
+        android:layout_marginRight="0dp"
+        android:gravity="center"
+        android:clickable="true" />
+
     <ImageView android:id="@+id/notifIntervalImage_Image"
         android:layout_width="90dp"
-        android:layout_height="fill_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
+        android:layout_height="90dp"
         android:src="@drawable/hiit"
-        android:layout_below="@+id/notifIntervalClose_Button" />
+        android:layout_alignBottom="@+id/linearLayout"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true" />
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Tabata"
+        android:id="@+id/notifIntervalName_TextView"
+        android:layout_gravity="center_horizontal"
+        android:textColor="@color/black"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:textSize="30dp"
+        android:typeface="monospace"
+        android:layout_toStartOf="@+id/notifIntervalClose_Button"
+        android:layout_alignEnd="@+id/linearLayout"
+        android:gravity="left"
+        android:layout_marginLeft="90dp" />
 
     <LinearLayout
         android:orientation="vertical"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_toRightOf="@+id/notifIntervalImage_Image"
-        android:layout_marginLeft="4dp"
-        android:layout_alignTop="@+id/notifIntervalImage_Image">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@+id/notifIntervalImage_Image"
+        android:id="@+id/linearLayout"
+        android:layout_below="@+id/notifIntervalName_TextView"
+        android:layout_alignEnd="@+id/notifIntervalClose_Button">
 
         <LinearLayout
             android:orientation="horizontal"
@@ -29,9 +63,9 @@
 
             <LinearLayout
                 android:orientation="horizontal"
-                android:layout_width="fill_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
-                android:layout_weight="50">
+                android:layout_marginRight="20dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -55,9 +89,8 @@
 
             <LinearLayout
                 android:orientation="horizontal"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_weight="50">
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent">
 
                 <TextView
                     android:layout_width="fill_parent"
@@ -88,10 +121,10 @@
 
             <LinearLayout
                 android:orientation="vertical"
-                android:layout_width="fill_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="50"
-                android:gravity="center_vertical">
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:gravity="center_vertical"
+                android:layout_marginRight="10dp">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -114,9 +147,8 @@
 
             <LinearLayout
                 android:orientation="vertical"
-                android:layout_width="fill_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
-                android:layout_weight="50"
                 android:gravity="left|center_vertical">
 
                 <TextView
@@ -127,7 +159,7 @@
                     android:id="@+id/notifIntervalTime_TextView"
                     android:textColor="@color/white"
                     android:textAlignment="gravity"
-                    android:gravity="center_vertical|center_horizontal" />
+                    android:gravity="left" />
 
                 <TextView
                     android:layout_width="fill_parent"
@@ -137,39 +169,12 @@
                     android:id="@+id/notifIntervalTotalTime_TextView"
                     android:textColor="@color/white"
                     android:textAlignment="gravity"
-                    android:gravity="center_vertical|center_horizontal" />
+                    android:gravity="left" />
             </LinearLayout>
         </LinearLayout>
 
     </LinearLayout>
 
-    <ImageButton
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="X"
-        android:id="@+id/notifIntervalClose_Button"
-        android:layout_alignParentBottom="false"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="false"
-        android:layout_alignParentTop="true"
-        android:textColor="@color/white"
-        android:textSize="20dp"
-        android:layout_marginRight="0dp"
-        android:gravity="center"
-        android:clickable="true" />
 
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Tabata"
-        android:id="@+id/notifIntervalName_TextView"
-        android:layout_gravity="center_horizontal"
-        android:textColor="#fbe9e7"
-        android:gravity="center_vertical|center_horizontal"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
