--- a/phone/src/main/res/layout/fragment_welcome_.xml
+++ b/phone/src/main/res/layout/fragment_welcome_.xml
@@ -14,4 +14,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Testing"
+        android:id="@+id/TestingButton"
+        android:layout_below="@+id/section_label"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="88dp" />
+
 </RelativeLayout>
