--- a/wear/src/main/res/layout/rect_activity_my.xml
+++ b/wear/src/main/res/layout/rect_activity_my.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,4 +13,4 @@
         android:text="New Button"
         android:id="@+id/button"
         android:layout_gravity="center_horizontal" />
-</BoxInsetLayout>
+</RelativeLayout>
