--- a/wear/src/main/res/layout/rect_activity_my.xml
+++ b/wear/src/main/res/layout/rect_activity_my.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="STATE"
-        android:id="@+id/textView"
+        android:id="@+id/interval_State"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:textSize="40dp" />
@@ -22,8 +22,8 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="00:00"
-        android:id="@+id/textView2"
-        android:layout_below="@+id/textView"
+        android:id="@+id/interval_time"
+        android:layout_below="@+id/interval_State"
         android:layout_centerHorizontal="true"
         android:gravity="center"
         android:textSize="50dp" />
@@ -33,8 +33,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Remaining:"
-        android:id="@+id/textView3"
-        android:layout_below="@+id/textView2"
+        android:layout_below="@+id/interval_time"
         android:layout_alignParentStart="true"
         android:layout_marginTop="8dp"
         android:layout_marginLeft="5dp" />
@@ -44,11 +43,11 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="00:00"
-        android:id="@+id/textView4"
+        android:id="@+id/interval_totalTime"
         android:gravity="center"
         android:textSize="30dp"
-        android:layout_toEndOf="@+id/textView3"
-        android:layout_below="@+id/textView2"
+        android:layout_toEndOf="@+id/interval_totalTime"
+        android:layout_below="@+id/interval_time"
         android:layout_alignParentEnd="true" />
 
     <TextView
@@ -56,17 +55,17 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Round: 2 / 8"
-        android:id="@+id/textView5"
+        android:id="@+id/interval_round"
         android:layout_alignParentBottom="true"
-        android:layout_alignStart="@+id/textView3" />
+        android:layout_alignParentStart="true"/>
 
     <ImageView
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:id="@+id/imageView2"
         android:src="@drawable/heart"
-        android:layout_alignBottom="@+id/textView5"
-        android:layout_toEndOf="@+id/textView5"
+        android:layout_alignBottom="@+id/interval_round"
+        android:layout_toEndOf="@+id/interval_round"
         android:layout_marginLeft="10dp" />
 
     <TextView
@@ -74,9 +73,9 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="180"
-        android:id="@+id/textView6"
+        android:id="@+id/interval_heartRate"
         android:layout_alignTop="@+id/imageView2"
-        android:layout_alignEnd="@+id/textView4"
+        android:layout_alignEnd="@+id/interval_totalTime"
         android:layout_toEndOf="@+id/imageView2"
         android:layout_alignParentBottom="true"
         android:gravity="center" />
