--- a/wear/src/main/res/layout/rect_activity_my.xml
+++ b/wear/src/main/res/layout/rect_activity_my.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="STATE"
+        android:text="NOTHING"
         android:id="@+id/interval_State"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
@@ -33,10 +33,11 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Remaining:"
-        android:layout_below="@+id/interval_time"
+
+        android:layout_alignTop="@+id/interval_totalTime"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="8dp"
-        android:layout_marginLeft="5dp" />
+        android:textSize="25dp"
+        android:id="@+id/textView2"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -46,38 +47,20 @@
         android:id="@+id/interval_totalTime"
         android:gravity="center"
         android:textSize="30dp"
-        android:layout_toEndOf="@+id/interval_totalTime"
+        android:layout_toEndOf="@+id/textView2"
         android:layout_below="@+id/interval_time"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Round: 2 / 8"
+        android:text="0 of 0"
         android:id="@+id/interval_round"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="180"
-        android:id="@+id/interval_heartRate"
-        android:layout_alignTop="@+id/imageView2"
-        android:layout_alignEnd="@+id/interval_totalTime"
-        android:layout_alignParentBottom="true"
-        android:gravity="center" />
-
-    <ImageView
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:id="@+id/imageView2"
-        android:src="@drawable/heart"
-        android:layout_alignBottom="@+id/interval_round"
-        android:layout_toStartOf="@id/interval_heartRate"
-        android:layout_marginRight="10dp"/>
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="15dp"
+        android:textSize="20dp"/>
 
 
 </RelativeLayout>
