--- a/phone/src/main/res/layout/fragment_chronometer.xml
+++ b/phone/src/main/res/layout/fragment_chronometer.xml
@@ -1,12 +1,15 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="300dp"
-    tools:context=".customFragments.ChronometerFragment">
+                xmlns:tools="http://schemas.android.com/tools"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:context=".customFragments.ChronometerFragment"
+                android:clickable="false"
+                android:background="@color/startInterval">
 
     <!-- TODO: Update blank fragment layout -->
 
-    <TextView
+    <vssnake.intervaltraining.utils.TextViewPlus
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
@@ -14,13 +17,13 @@
         android:text="00:00"
         android:gravity="center"
         android:layout_alignParentStart="true"
-        android:textSize="80dp"
-        android:typeface="monospace"
+        android:textSize="130dp"
+        app:customFont="roboto_black.ttf"
         android:textColor="@color/numbers_interval_goo"
         android:layout_below="@+id/chronomterTextInterval_TextView"
         android:layout_marginTop="-30dp" />
 
-    <TextView
+    <vssnake.intervaltraining.utils.TextViewPlus
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
@@ -29,35 +32,38 @@
         android:textColor="@color/black"
         android:layout_alignParentTop="true"
         android:textSize="30dp"
+        app:customFont="roboto_black.ttf"
         android:layout_alignParentStart="true"
         android:gravity="center" />
 
-    <TextView
+    <vssnake.intervaltraining.utils.TextViewPlus
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/total_remaining"
+        app:customFont="roboto_black.ttf"
         android:id="@+id/chronometerTotalText_TextView"
-        android:gravity="center"
         android:textColor="@color/black"
-        android:layout_alignBottom="@+id/chronometerTotal_TextView"
-        android:layout_toLeftOf="@+id/chronometerTotal_TextView"
-        android:layout_marginRight="44dp"
-        android:layout_marginBottom="3dp" />
+        android:layout_below="@+id/chronometer_TextView"
 
-    <TextView
+        android:layout_centerInParent="true"/>
+
+    <vssnake.intervaltraining.utils.TextViewPlus
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="00:00"
+
         android:id="@+id/chronometerTotal_TextView"
         android:gravity="center"
         android:textSize="40dp"
-        android:typeface="monospace"
+        app:customFont="roboto_black.ttf"
         android:textColor="@color/white"
-        android:layout_marginRight="61dp"
-        android:layout_below="@+id/chronometer_TextView"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="-20dp" />
+        android:layout_toStartOf="@+id/chronometerTotalText_TextView"
+        android:text="00:00"
+        android:layout_below="@+id/chronometerTotalText_TextView"
+        android:layout_alignLeft="@+id/chronometerTotalText_TextView"
+        android:layout_alignStart="@+id/chronometerTotalText_TextView"
+        android:layout_alignRight="@+id/chronometerTotalText_TextView"
+        android:layout_alignEnd="@+id/chronometerTotalText_TextView"/>
 
 </RelativeLayout>
