--- a/phone/src/main/res/layout/fragment_main.xml
+++ b/phone/src/main/res/layout/fragment_main.xml
@@ -17,4 +17,12 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_marginTop="25dp" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageButton"
+        android:layout_below="@+id/chronometer_TextView"
+        android:layout_marginTop="130dp"
+        android:background="@drawable/cross"/>
 </RelativeLayout>
